CmpE152_project/UnbreakableParser.cpp

// Generated from Unbreakable.g4 by ANTLR 4.7


#include "UnbreakableVisitor.h"

#include "UnbreakableParser.h"


using namespace antlrcpp;
using namespace antlr4;

UnbreakableParser::UnbreakableParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

UnbreakableParser::~UnbreakableParser() {
  delete _interpreter;
}

std::string UnbreakableParser::getGrammarFileName() const {
  return "Unbreakable.g4";
}

const std::vector<std::string>& UnbreakableParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& UnbreakableParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

UnbreakableParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<UnbreakableParser::StatContext *> UnbreakableParser::ProgContext::stat() {
  return getRuleContexts<UnbreakableParser::StatContext>();
}

UnbreakableParser::StatContext* UnbreakableParser::ProgContext::stat(size_t i) {
  return getRuleContext<UnbreakableParser::StatContext>(i);
}


size_t UnbreakableParser::ProgContext::getRuleIndex() const {
  return UnbreakableParser::RuleProg;
}

antlrcpp::Any UnbreakableParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UnbreakableVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

UnbreakableParser::ProgContext* UnbreakableParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, UnbreakableParser::RuleProg);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(29); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(28);
      stat();
      setState(31); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << UnbreakableParser::T__8)
      | (1ULL << UnbreakableParser::T__11)
      | (1ULL << UnbreakableParser::IF)
      | (1ULL << UnbreakableParser::ADD_OP)
      | (1ULL << UnbreakableParser::SUB_OP)
      | (1ULL << UnbreakableParser::IDENTIFIER)
      | (1ULL << UnbreakableParser::DIGIT))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclarContext ------------------------------------------------------------------

UnbreakableParser::VarDeclarContext::VarDeclarContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* UnbreakableParser::VarDeclarContext::IDENTIFIER() {
  return getToken(UnbreakableParser::IDENTIFIER, 0);
}

UnbreakableParser::PrimitiveTypeContext* UnbreakableParser::VarDeclarContext::primitiveType() {
  return getRuleContext<UnbreakableParser::PrimitiveTypeContext>(0);
}


size_t UnbreakableParser::VarDeclarContext::getRuleIndex() const {
  return UnbreakableParser::RuleVarDeclar;
}

antlrcpp::Any UnbreakableParser::VarDeclarContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UnbreakableVisitor*>(visitor))
    return parserVisitor->visitVarDeclar(this);
  else
    return visitor->visitChildren(this);
}

UnbreakableParser::VarDeclarContext* UnbreakableParser::varDeclar() {
  VarDeclarContext *_localctx = _tracker.createInstance<VarDeclarContext>(_ctx, getState());
  enterRule(_localctx, 2, UnbreakableParser::RuleVarDeclar);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(33);
    match(UnbreakableParser::IDENTIFIER);
    setState(34);
    primitiveType();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrimitiveTypeContext ------------------------------------------------------------------

UnbreakableParser::PrimitiveTypeContext::PrimitiveTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t UnbreakableParser::PrimitiveTypeContext::getRuleIndex() const {
  return UnbreakableParser::RulePrimitiveType;
}

antlrcpp::Any UnbreakableParser::PrimitiveTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UnbreakableVisitor*>(visitor))
    return parserVisitor->visitPrimitiveType(this);
  else
    return visitor->visitChildren(this);
}

UnbreakableParser::PrimitiveTypeContext* UnbreakableParser::primitiveType() {
  PrimitiveTypeContext *_localctx = _tracker.createInstance<PrimitiveTypeContext>(_ctx, getState());
  enterRule(_localctx, 4, UnbreakableParser::RulePrimitiveType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << UnbreakableParser::T__0)
      | (1ULL << UnbreakableParser::T__1)
      | (1ULL << UnbreakableParser::T__2)
      | (1ULL << UnbreakableParser::T__3)
      | (1ULL << UnbreakableParser::T__4)
      | (1ULL << UnbreakableParser::T__5)
      | (1ULL << UnbreakableParser::T__6))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

UnbreakableParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

UnbreakableParser::If_statContext* UnbreakableParser::StatContext::if_stat() {
  return getRuleContext<UnbreakableParser::If_statContext>(0);
}

UnbreakableParser::Assignment_statContext* UnbreakableParser::StatContext::assignment_stat() {
  return getRuleContext<UnbreakableParser::Assignment_statContext>(0);
}

UnbreakableParser::ExprContext* UnbreakableParser::StatContext::expr() {
  return getRuleContext<UnbreakableParser::ExprContext>(0);
}

UnbreakableParser::VarDeclarContext* UnbreakableParser::StatContext::varDeclar() {
  return getRuleContext<UnbreakableParser::VarDeclarContext>(0);
}

UnbreakableParser::Compound_statContext* UnbreakableParser::StatContext::compound_stat() {
  return getRuleContext<UnbreakableParser::Compound_statContext>(0);
}


size_t UnbreakableParser::StatContext::getRuleIndex() const {
  return UnbreakableParser::RuleStat;
}

antlrcpp::Any UnbreakableParser::StatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UnbreakableVisitor*>(visitor))
    return parserVisitor->visitStat(this);
  else
    return visitor->visitChildren(this);
}

UnbreakableParser::StatContext* UnbreakableParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 6, UnbreakableParser::RuleStat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(55);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(38);
      if_stat();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(39);
      assignment_stat();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(40);
      expr(0);
      setState(44);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(41);
          match(UnbreakableParser::T__7); 
        }
        setState(46);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
      }
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(47);
      varDeclar();
      setState(51);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(48);
          match(UnbreakableParser::T__7); 
        }
        setState(53);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
      }
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(54);
      compound_stat();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Compound_statContext ------------------------------------------------------------------

UnbreakableParser::Compound_statContext::Compound_statContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<UnbreakableParser::StatContext *> UnbreakableParser::Compound_statContext::stat() {
  return getRuleContexts<UnbreakableParser::StatContext>();
}

UnbreakableParser::StatContext* UnbreakableParser::Compound_statContext::stat(size_t i) {
  return getRuleContext<UnbreakableParser::StatContext>(i);
}


size_t UnbreakableParser::Compound_statContext::getRuleIndex() const {
  return UnbreakableParser::RuleCompound_stat;
}

antlrcpp::Any UnbreakableParser::Compound_statContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UnbreakableVisitor*>(visitor))
    return parserVisitor->visitCompound_stat(this);
  else
    return visitor->visitChildren(this);
}

UnbreakableParser::Compound_statContext* UnbreakableParser::compound_stat() {
  Compound_statContext *_localctx = _tracker.createInstance<Compound_statContext>(_ctx, getState());
  enterRule(_localctx, 8, UnbreakableParser::RuleCompound_stat);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57);
    match(UnbreakableParser::T__8);
    setState(63);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << UnbreakableParser::T__8)
      | (1ULL << UnbreakableParser::T__11)
      | (1ULL << UnbreakableParser::IF)
      | (1ULL << UnbreakableParser::ADD_OP)
      | (1ULL << UnbreakableParser::SUB_OP)
      | (1ULL << UnbreakableParser::IDENTIFIER)
      | (1ULL << UnbreakableParser::DIGIT))) != 0)) {
      setState(58);
      stat();
      setState(59);
      match(UnbreakableParser::T__7);
      setState(65);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(66);
    match(UnbreakableParser::T__9);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Assignment_statContext ------------------------------------------------------------------

UnbreakableParser::Assignment_statContext::Assignment_statContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* UnbreakableParser::Assignment_statContext::IDENTIFIER() {
  return getToken(UnbreakableParser::IDENTIFIER, 0);
}

UnbreakableParser::ExprContext* UnbreakableParser::Assignment_statContext::expr() {
  return getRuleContext<UnbreakableParser::ExprContext>(0);
}


size_t UnbreakableParser::Assignment_statContext::getRuleIndex() const {
  return UnbreakableParser::RuleAssignment_stat;
}

antlrcpp::Any UnbreakableParser::Assignment_statContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UnbreakableVisitor*>(visitor))
    return parserVisitor->visitAssignment_stat(this);
  else
    return visitor->visitChildren(this);
}

UnbreakableParser::Assignment_statContext* UnbreakableParser::assignment_stat() {
  Assignment_statContext *_localctx = _tracker.createInstance<Assignment_statContext>(_ctx, getState());
  enterRule(_localctx, 10, UnbreakableParser::RuleAssignment_stat);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(UnbreakableParser::IDENTIFIER);
    setState(69);
    match(UnbreakableParser::T__10);
    setState(70);
    expr(0);
    setState(74);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(71);
        match(UnbreakableParser::T__7); 
      }
      setState(76);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_statContext ------------------------------------------------------------------

UnbreakableParser::If_statContext::If_statContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* UnbreakableParser::If_statContext::IF() {
  return getToken(UnbreakableParser::IF, 0);
}

std::vector<UnbreakableParser::Compound_statContext *> UnbreakableParser::If_statContext::compound_stat() {
  return getRuleContexts<UnbreakableParser::Compound_statContext>();
}

UnbreakableParser::Compound_statContext* UnbreakableParser::If_statContext::compound_stat(size_t i) {
  return getRuleContext<UnbreakableParser::Compound_statContext>(i);
}

UnbreakableParser::ExprContext* UnbreakableParser::If_statContext::expr() {
  return getRuleContext<UnbreakableParser::ExprContext>(0);
}

tree::TerminalNode* UnbreakableParser::If_statContext::ELSE() {
  return getToken(UnbreakableParser::ELSE, 0);
}


size_t UnbreakableParser::If_statContext::getRuleIndex() const {
  return UnbreakableParser::RuleIf_stat;
}

antlrcpp::Any UnbreakableParser::If_statContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UnbreakableVisitor*>(visitor))
    return parserVisitor->visitIf_stat(this);
  else
    return visitor->visitChildren(this);
}

UnbreakableParser::If_statContext* UnbreakableParser::if_stat() {
  If_statContext *_localctx = _tracker.createInstance<If_statContext>(_ctx, getState());
  enterRule(_localctx, 12, UnbreakableParser::RuleIf_stat);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(UnbreakableParser::IF);

    setState(78);
    match(UnbreakableParser::T__11);
    setState(79);
    expr(0);
    setState(80);
    match(UnbreakableParser::T__12);
    setState(82);
    compound_stat();
    setState(85);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == UnbreakableParser::ELSE) {
      setState(83);
      match(UnbreakableParser::ELSE);
      setState(84);
      compound_stat();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

UnbreakableParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

UnbreakableParser::NumberContext* UnbreakableParser::ExprContext::number() {
  return getRuleContext<UnbreakableParser::NumberContext>(0);
}

tree::TerminalNode* UnbreakableParser::ExprContext::IDENTIFIER() {
  return getToken(UnbreakableParser::IDENTIFIER, 0);
}

std::vector<UnbreakableParser::ExprContext *> UnbreakableParser::ExprContext::expr() {
  return getRuleContexts<UnbreakableParser::ExprContext>();
}

UnbreakableParser::ExprContext* UnbreakableParser::ExprContext::expr(size_t i) {
  return getRuleContext<UnbreakableParser::ExprContext>(i);
}

UnbreakableParser::Mul_div_opContext* UnbreakableParser::ExprContext::mul_div_op() {
  return getRuleContext<UnbreakableParser::Mul_div_opContext>(0);
}

UnbreakableParser::Add_sub_opContext* UnbreakableParser::ExprContext::add_sub_op() {
  return getRuleContext<UnbreakableParser::Add_sub_opContext>(0);
}

UnbreakableParser::Rel_opContext* UnbreakableParser::ExprContext::rel_op() {
  return getRuleContext<UnbreakableParser::Rel_opContext>(0);
}


size_t UnbreakableParser::ExprContext::getRuleIndex() const {
  return UnbreakableParser::RuleExpr;
}

antlrcpp::Any UnbreakableParser::ExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UnbreakableVisitor*>(visitor))
    return parserVisitor->visitExpr(this);
  else
    return visitor->visitChildren(this);
}


UnbreakableParser::ExprContext* UnbreakableParser::expr() {
   return expr(0);
}

UnbreakableParser::ExprContext* UnbreakableParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  UnbreakableParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  UnbreakableParser::ExprContext *previousContext = _localctx;
  size_t startState = 14;
  enterRecursionRule(_localctx, 14, UnbreakableParser::RuleExpr, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(94);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case UnbreakableParser::ADD_OP:
      case UnbreakableParser::SUB_OP:
      case UnbreakableParser::DIGIT: {
        setState(88);
        number();
        break;
      }

      case UnbreakableParser::IDENTIFIER: {
        setState(89);
        match(UnbreakableParser::IDENTIFIER);
        break;
      }

      case UnbreakableParser::T__11: {
        setState(90);
        match(UnbreakableParser::T__11);
        setState(91);
        expr(0);
        setState(92);
        match(UnbreakableParser::T__12);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(110);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(108);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(96);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(97);
          mul_div_op();
          setState(98);
          expr(7);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(100);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(101);
          add_sub_op();
          setState(102);
          expr(6);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<ExprContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpr);
          setState(104);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(105);
          rel_op();
          setState(106);
          expr(5);
          break;
        }

        } 
      }
      setState(112);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- VariableContext ------------------------------------------------------------------

UnbreakableParser::VariableContext::VariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* UnbreakableParser::VariableContext::IDENTIFIER() {
  return getToken(UnbreakableParser::IDENTIFIER, 0);
}


size_t UnbreakableParser::VariableContext::getRuleIndex() const {
  return UnbreakableParser::RuleVariable;
}

antlrcpp::Any UnbreakableParser::VariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UnbreakableVisitor*>(visitor))
    return parserVisitor->visitVariable(this);
  else
    return visitor->visitChildren(this);
}

UnbreakableParser::VariableContext* UnbreakableParser::variable() {
  VariableContext *_localctx = _tracker.createInstance<VariableContext>(_ctx, getState());
  enterRule(_localctx, 16, UnbreakableParser::RuleVariable);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    match(UnbreakableParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NumberContext ------------------------------------------------------------------

UnbreakableParser::NumberContext::NumberContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* UnbreakableParser::NumberContext::DIGIT() {
  return getToken(UnbreakableParser::DIGIT, 0);
}

UnbreakableParser::SignContext* UnbreakableParser::NumberContext::sign() {
  return getRuleContext<UnbreakableParser::SignContext>(0);
}


size_t UnbreakableParser::NumberContext::getRuleIndex() const {
  return UnbreakableParser::RuleNumber;
}

antlrcpp::Any UnbreakableParser::NumberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UnbreakableVisitor*>(visitor))
    return parserVisitor->visitNumber(this);
  else
    return visitor->visitChildren(this);
}

UnbreakableParser::NumberContext* UnbreakableParser::number() {
  NumberContext *_localctx = _tracker.createInstance<NumberContext>(_ctx, getState());
  enterRule(_localctx, 18, UnbreakableParser::RuleNumber);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == UnbreakableParser::ADD_OP

    || _la == UnbreakableParser::SUB_OP) {
      setState(115);
      sign();
    }
    setState(118);
    match(UnbreakableParser::DIGIT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SignContext ------------------------------------------------------------------

UnbreakableParser::SignContext::SignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t UnbreakableParser::SignContext::getRuleIndex() const {
  return UnbreakableParser::RuleSign;
}

antlrcpp::Any UnbreakableParser::SignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<UnbreakableVisitor*>(visitor))
    return parserVisitor->visitSign(this);
  else
    return visitor->visitChildren(this);
}

UnbreakableParser::SignContext* UnbreakableParser::sign() {
  SignContext *_localctx = _tracker.createInstance<SignContext>(_ctx, getState());
  enterRule(_localctx, 20, UnbreakableParser::RuleSign);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    _la = _input->LA(1);
    if (!(_la == UnbreakableParser::ADD_OP

    || _la == UnbreakableParser::SUB_OP)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Mul_div_opContext ------------------------------------------------------------------

UnbreakableParser::Mul_div_opContext::Mul_div_opContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* UnbreakableParser::Mul_div_opContext::MUL_OP() {
  return getToken(UnbreakableParser::MUL_OP, 0);
}

tree::TerminalNode* UnbreakableParser::Mul_div_opContext::DIV_OP() {
  return getToken(UnbreakableParser::DIV_OP, 0);
}


size_t UnbreakableParser::Mul_div_opContext::getRuleIndex() const {
  return UnbreakableParser::RuleMul_div_op;
}
